projects/compiler/test/lexer/chars_error_too_big.out
Error at %FILE_NAME%:1:3
Unterminated character literal:
  |  'ab'
       ^